[project]
name = "langchain-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.5.0",
    "isort>=8.0.1",
    "langchain>=1.3.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
]
